# PythonCppStreamer

./: CMakeLists.txt  README.txt  eo_interface.cpp  eo_interface.h  main.cpp
scripts/: ImageTracker.py  ImageTracking _cv2.py  ImageTracking.py  ImageTracking_cv2.py  ImageTracking_gst.py  NOT_FINISHED_ImageTrackingUpdate.py  test.py
scripts/modules/: tcp_server.py  udp_client.py
